some styling fixes, check index out of bounds

--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,32 @@
 body {
-  background-color: #0dab76;
   background-attachment: fixed;
+  background-color: #0dab76;
   background-position: center;
   background-size: cover;
   color: #ffffff;
+  height: 100vh;
   transition: 1s background ease-in-out;
 }
 
 .container {
-  bottom: 50%;
-  height: 5rem;
-  left: 0;
-  position: absolute;
-  right: 0;
-  text-align: center;
-  top: 50%;
-  transform: translateY(-50%);
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
 }
 
 h1 {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 5rem;
-  line-height: 5rem;
+  line-height: 4rem;
   margin: 0 1rem;
   opacity: .85;
   text-shadow: 2px 2px 2px #0dab76;
 }
 
 ul {
-  margin: 0 1rem;
+  margin: 1rem;
   padding: 0;
 }
 
@@ -50,10 +48,11 @@ a, button {
   cursor: pointer;
   font-family: inherit;
   font-size: 1.5rem;
-  margin: 0;
-  transition: .2s color ease-in-out;
-  text-decoration: none;
   font-weight: bold;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  transition: .2s color ease-in-out;
 }
 
 a:hover, button:hover {
